@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.platform</groupId>
     <artifactId>xwiki-platform-ckeditor</artifactId>
-    <version>15.5-SNAPSHOT</version>
+    <version>15.7-SNAPSHOT</version>
   </parent>
   <packaging>webjar</packaging>
   <artifactId>xwiki-platform-ckeditor-webjar</artifactId>
@@ -109,25 +109,37 @@
           <overwrite>true</overwrite>
         </configuration>
       </plugin>
+      <!-- Add support for passing JVM arguments when running CKBuilder. -->
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+        <artifactId>replacer</artifactId>
+        <version>1.5.3</version>
+        <executions>
+          <execution>
+            <id>add-jvm-args</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>replace</goal>
+            </goals>
+            <configuration>
+              <file>${ckeditor.builder.path}/build.sh</file>
+              <replacements>
+                <replacement>
+                  <!-- The arguments that appear before -jar are passed to the JVM while those that appear after are
+                    passed to the Java application (CKBuilder in this case). -->
+                  <token>java -jar</token>
+                  <value>java \$JVM_ARGS -jar</value>
+                </replacement>
+              </replacements>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <!-- Build the CKEditor. -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <executions>
-          <!-- Remove the Byte Order Mark from the start of build.sh -->
-          <execution>
-            <id>remove-bom</id>
-            <!-- Use a phase after compile because the Clirr Maven Plugin executes all the phases up to compile
-                 twice. -->
-            <phase>process-classes</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <executable>sed</executable>
-            </configuration>
-          </execution>
-          <!-- Build the CKEditor. -->
           <execution>
             <id>build-ckeditor</id>
             <!-- Use a phase after compile because the Clirr Maven Plugin executes all the phases up to compile
@@ -138,6 +150,10 @@
             </goals>
             <configuration>
               <executable>${ckeditor.builder.path}/build.sh</executable>
+              <environmentVariables>
+                <!-- See https://github.com/ckeditor/ckbuilder/issues/34 -->
+                <JVM_ARGS>--add-exports java.desktop/sun.java2d=ALL-UNNAMED</JVM_ARGS>
+              </environmentVariables>
               <arguments>
                 <!-- Exclude from release all plugins/skins that are not specified in build-config. -->
                 <argument>--skip-omitted-in-build-config</argument>
@@ -157,68 +173,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>unix</id>
-      <activation>
-        <os>
-          <family>unix</family>
-        </os>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>exec-maven-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>remove-bom</id>
-                  <configuration>
-                    <arguments>
-                      <argument>-i</argument>
-                      <argument>1s/^\xEF\xBB\xBF//</argument>
-                      <argument>${ckeditor.builder.path}/build.sh</argument>
-                    </arguments>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-    <profile>
-      <id>mac</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>exec-maven-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>remove-bom</id>
-                  <configuration>
-                    <arguments>
-                      <argument>-i</argument>
-                      <argument>''</argument>
-                      <argument>-e</argument>
-                      <argument>1s/^\xEF\xBB\xBF//</argument>
-                      <argument>${ckeditor.builder.path}/build.sh</argument>
-                    </arguments>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-  </profiles>
 </project>
